Corrected typo in notebook title cell

--- a/vrtachnik_eda_notebook.ipynb
+++ b/vrtachnik_eda_notebook.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Brett Vrtachnik: Exploratory Data Analysis Project\n",
     "This Notebook will be used for Project 4 in Data Analytics Fundamentals at NW Missouri State University\n",
-    "Data: February 4, 2025"
+    "Date: February 4, 2025"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "4           5.0          3.6           1.4          0.2  setosa"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
